--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
-    "@metamask/sdk": "^0.5.6",
+    "@metamask/sdk": "^0.4.2",
     "@planetscale/database": "^1.7.0",
     "@tremor/react": "^3.2.6",
     "@types/js-cookie": "^3.0.3",
@@ -35,7 +35,8 @@
     "react-dom": "18.2.0",
     "server-only": "^0.0.1",
     "tailwindcss": "^3.3.2",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "web3.storage": "^4.5.5"
   },
   "prettier": {
     "arrowParens": "always",
