--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
-    "@metamask/sdk": "^0.4.2",
+    "@metamask/sdk": "0.4.2",
     "@planetscale/database": "^1.7.0",
     "@tremor/react": "^3.2.6",
     "@types/js-cookie": "^3.0.3",
@@ -19,13 +19,10 @@
     "@types/react-dom": "18.2.7",
     "@vercel/analytics": "^1.0.1",
     "autoprefixer": "^10.4.14",
-    "axios": "^1.4.0",
     "dotenv": "^16.3.1",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
     "js-cookie": "^3.0.5",
-    "kysely": "^0.26.1",
-    "kysely-planetscale": "^1.3.0",
     "next": "13.4.12",
     "next-auth": "^4.22.1",
     "postcss": "^8.4.24",
@@ -36,6 +33,7 @@
     "server-only": "^0.0.1",
     "tailwindcss": "^3.3.2",
     "typescript": "5.1.6",
+    "web3": "^4.0.3",
     "web3.storage": "^4.5.5"
   },
   "prettier": {
