--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "@vercel/analytics": "^1.0.1",
+    "antd": "^5.7.2",
     "autoprefixer": "^10.4.14",
     "dotenv": "^16.3.1",
     "eslint": "8.45.0",
