--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "20.4.3",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
+    "@uiw/react-md-editor": "^3.23.3",
     "@vercel/analytics": "^1.0.1",
     "antd": "^5.7.2",
     "autoprefixer": "^10.4.14",
