--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
     ],
 
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/thread/page.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/thread/[[...thread_cid]]/page.js"],
   "exclude": ["node_modules"]
 }
